media: Fix sender name clipping in mobile.
In mobile devices, letters like g, y, p etc. in sender name were clipped from bottom.
Fixed by adding line height to sender name.

Fixes: #11445

--- a/static/styles/media.scss
+++ b/static/styles/media.scss
@@ -305,6 +305,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        line-height: 15px;
     }
 
     textarea.new_message_textarea {
